fixing problem when needing to add user and needing to set a initial location on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,10 +3,6 @@
           box-sizing: border-box;
 }
 
-.app {
-  overflow: hidden;
-}
-
 body {
   margin: 0;
   padding: 0;
